--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" type="text/css" href="./new/flaticon.css"> 
   
 <style>
+  a{
+    color:'white'
+  }
+  NavLink{
+    color: antiquewhite
+  }
   * {
   box-sizing: border-box;
 } 
